--- a/web/css/main.css
+++ b/web/css/main.css
@@ -36,3 +36,16 @@ nav .logo {
 #start-stop {
     display: inline-block;
 }
+
+.main {
+    margin-top: 60px;
+}
+
+table {
+    width: 100%;
+}
+
+table tr {
+    background-color: transparent;
+    color: #FFF;
+}
